# spice-lsp

./: .gitignore  2_getting-started.html  3_principles.html  404.html  4_architecture.html  5_lsp-features.html  6_formatter.html  7_limitations.html  8_dialect-reference-and-semantics.html  9_include-and-lib-resolution.html  Cargo.toml  LICENSE  README.md  index.html  pixi.toml  print.html  searcher-09f2665d.js  searchindex-bb9b5bb6.js  toc-d104083b.js  toc.html
.cursor/rules/: keep-docs-in-sync.mdc  use-pixi-for-deps.mdc
.github/workflows/: ci.yml  deploy-docs.yml  release-vscode.yml
crates/spice-lsp/: Cargo.toml
crates/spice-lsp/src/: backend.rs  convert.rs  main.rs
crates/spice-lsp/tests/: lsp_stdio.rs
crates/spice-parser/: Cargo.toml
crates/spice-parser/src/: analyze.rs  diagnostic.rs  dialect.rs  format.rs  hover_token.rs  includes.rs  lib.rs  profile.rs  subckt.rs  symbols.rs
crates/spice-parser/tests/: format_golden.rs
crates/spice-parser/tests/format/comments/: expected.cir  input.cir
crates/spice-parser/tests/format/directives/: expected.cir
crates/spice-parser/tests/format/instances/: expected.cir  input.cir
crates/spice-parser/tests/format/wrap/: expected.cir  input.cir
crates/spice-reference/: Cargo.toml  build.rs
crates/spice-reference/src/: catalog.rs  lib.rs
development/: 1_build.html  2_demo-and-test.html  3_vscode-integration.html
docs/: 2_getting-started.md  3_principles.md  4_architecture.md  5_lsp-features.md  6_formatter.md  7_limitations.md  8_dialect-reference-and-semantics.md  9_include-and-lib-resolution.md  README.md  SUMMARY.md  book.toml
docs/development/: 1_build.md  2_demo-and-test.md  2_mvp.md  3_demo-and-test.md  3_vscode-integration.md  4_vscode-integration.md
docs/internal/: 1_design.md  2_multi-dialect-design.md  3_large-file-extracted-mode.md
docs/reference/: 1_shared.md  2_hspice.md  3_ngspice.md  4_ltspice.md  README.md
editors/vscode/: .vscodeignore  README.md  esbuild.mjs  language-configuration.json  package-lock.json  package.json
editors/vscode/demo/: README.md  corners.lib  models.sp  same-file.sp  top-lib.sp  top.sp
editors/vscode/src/: demoContent.ts  extension.ts
editors/vscode/syntaxes/: spice.tmLanguage.json
internal/: 1_design.html  2_multi-dialect-design.html  3_large-file-extracted-mode.html
reference/: 1_shared.html  2_hspice.html  3_ngspice.html  4_ltspice.html  index.html  schema.json
reference/_shared/: dialect.toml
reference/_shared/directives/: ac.json  dc.json  end.json  ends.json  ic.json  include.json  model.json  op.json  param.json  print.json  subckt.json  temp.json  tran.json
reference/_shared/elements/: C.json  R.json  X.json
reference/hspice/: dialect.toml
reference/hspice/directives/: ac.json  alter.json  data.json  dc.json  end.json  ic.json  include.json  lib.json  measure.json  nodeset.json  noise.json  op.json  option.json  param.json  print.json  probe.json  temp.json  tf.json  tran.json
reference/ltspice/: dialect.toml
reference/ltspice/directives/: tran.json
reference/ngspice/: dialect.toml
reference/ngspice/directives/: tran.json
scripts/: package-vscode-extension.sh  setup-github-pages.sh  zig-cc-aarch64.sh  zig-cc-x86_64.sh
test-data/invalid/: bad-continuation.cir  duplicate-instance.cir  unclosed-subckt.cir  unknown-subckt.cir
test-data/valid/: hspice-data-block-plus.cir  hspice-data-block.cir  simple-rc.cir  subckt.cir
test-data/valid/with-include/: corners.lib  models.inc  top-lib.cir  top.cir
tree-sitter-spice/: Cargo.toml  build.rs  grammar.js  package.json
tree-sitter-spice/bindings/rust/: lib.rs
tree-sitter-spice/src/: grammar.json  node-types.json  parser.c
