[package]
name = "spice-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Language Server Protocol implementation for SPICE netlists"

[[bin]]
name = "spice-lsp"
path = "src/main.rs"

[dependencies]
spice-parser = { workspace = true }
spice-reference = { workspace = true }
tower-lsp = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4.6.2", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
tokio = { workspace = true, features = ["io-util", "macros", "process", "rt-multi-thread", "time"] }

[[test]]
name = "lsp_stdio"
path = "tests/lsp_stdio.rs"
harness = true
