[package]
name = "spice-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "SPICE netlist parser and syntax diagnostics"

[dependencies]
tree-sitter = { workspace = true }
tree-sitter-spice = { workspace = true }

[dev-dependencies]
walkdir = "2"
